--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ streamlit==1.29.0
 pandas>=1.3.0
 scikit-learn
 altair>=4.0
+langchain
+zhipuai
+langchain_community
+langchain_openai
+chromadb
+langchain_zhipu 
